# ndktest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wzj/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/wzj/ndktest/: MainActivity.java
app/src/test/java/com/wzj/ndktest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
